--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     ...
                 </div>
                 <div class="tempImg">
-                    ...
+                    <img src="http://openweathermap.org/img/wn/10d@2x.png" alt="">
                 </div>
             </div>
             <div class="vento">
@@ -43,7 +43,7 @@
                     ...
                 </div>
                 <div class="ventoImg">
-                    ...
+                    <img src="https://cdn-icons-png.flaticon.com/512/1164/1164960.png" alt="">
                 </div>
             </div>
         </div>
